--- a/P_sets/index.html
+++ b/P_sets/index.html
@@ -1106,17 +1106,17 @@
 						<td style="vertical-align:top; width:50%; height:100%">
 							<table style="padding:10 0 10 20; color:#aaa; font-family:'Avenir', 'light'; font-size:18; width:100%">
 								<tr>
-									<td style="vertical-align:top">Fundamental Principles of Counting</td>
-									<td style="padding:2 0 0 80">
+									<td style="vertical-align:top; padding:11 0 0 1">Fundamental Principles of Counting</td>
+									<td style="padding:12 0 0 80">
 										<div style="padding:0 0 0 0; margin:0 0 0 0" align="right">
 											<input type="submit" style="position: fixed; left: -10000000px;" disabled/>
-											<input type="search" class="search" autosave="10" id="clc_fe_s3" onsearch="search_func3()" 
-													placeholder="Search discom_5E / P">
+											<input type="search" class="search" autosave="5" id="clc_fe3" onsearch="search_func3()" 
+													placeholder="Search discom_5E / PS">
 											<div style="border-bottom:1 solid #f2f2f2"></div>
 											<p id="search_res3" style="margin:0 6 0 0; font-size:14; font-family:'Avenir', 'light"></p>
 											<script>
 											function search_func3() {
-											   var x = document.getElementById("clc_fe_s3");
+											   var x = document.getElementById("clc_fe3");
 											   document.getElementById("search_res3").innerHTML = "<br>" + x.value;
 											}
 											</script>
@@ -1187,9 +1187,18 @@
 						</td>
 						<td style="vertical-align:top;
 									width:50%; height:100%;
-									padding: 0 0 0 18;
-									border-top:20 solid #f2f2f2;
+									padding:0 0 0 0;
 									border-left:1 solid #f2f2f2">
+							<div style="width:100%; height:20; margin:0 0 0 0; padding:0 0 2 0; background:#f2f2f2">
+								<div style="float:right; margin:0 10 0 0">
+							  		<a class="textnav_f2">&#9508;</a>
+							  		<a class="textnav_f2">&#9500;</a>
+							  	</div>
+							  	<div style="float:right; margin:0 15 0 0">
+							  		<a class="textnav_f2">&#9508;</a>
+							  		<a class="textnav_f2">&#9500;</a>
+							  	</div>
+							</div>
 							<div class="infscrll">
 								<table style="padding: 0 0 0 0">
 									<tr>
